tests/golden/errors/printf-width-huge-dyn.rk
fn main() {
    f := "%999999999d\n"
    printf(f, 1)
}
